# lab_09.1

./: CMakeLists.txt
include/: dod.h  sum.h  var.h
src/: dod.cpp  main.cpp  sum.cpp  var.cpp
tests/: test_h.cpp
